# ShadowrocketForAndroid

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-debug.yaml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/log/: SystemLogcat.kt
app/src/main/res/values/: strings.xml
common/src/main/java/com/github/kr328/clash/common/log/: Log.kt
common/src/main/res/values-ru/: strings.xml
common/src/main/res/values-zh/: strings.xml
core/: build.gradle.kts
core/src/foss/golang/clash/.github/workflows/: trigger-lqwbd-update.yml
core/src/foss/golang/clash/adapter/outboundgroup/: patch_android.go
core/src/foss/golang/clash/component/dialer/: dialer.go  socket_hook.go
core/src/foss/golang/clash/component/loopback/: detector.go
core/src/foss/golang/clash/component/process/: process.go
core/src/foss/golang/clash/constant/: path.go
core/src/foss/golang/clash/constant/features/: lqwbd.go  lqwbd_stub.go  tags.go
core/src/foss/golang/clash/dns/: patch_android.go  system_common.go
core/src/foss/golang/clash/hub/route/: patch_android.go
core/src/foss/golang/clash/listener/http/: server.go
core/src/foss/golang/clash/listener/sing_tun/: server_android.go  server_notandroid.go
core/src/foss/golang/clash/tunnel/: tunnel.go
core/src/foss/golang/clash/tunnel/statistic/: patch_android.go
core/src/main/cpp/: CMakeLists.txt
core/src/main/golang/native/: bridge.h
core/src/main/golang/native/delegate/: init.go
design/src/main/res/layout/: design_about.xml  design_main.xml  design_settings.xml
design/src/main/res/values/: strings.xml
design/src/main/res/values-zh/: strings.xml
hideapi/src/main/res/values/: strings.xml
service/src/main/res/drawable/: ic_logo_service.xml
